feat(workspace): add @mastra/daytona sandbox provider
Add first-party Daytona cloud sandbox integration for Mastra workspaces,
implementing the WorkspaceSandbox interface via MastraSandbox base class.

- DaytonaSandbox class with full lifecycle (start/stop/destroy)
- Command execution with shell quoting and timeout conversion (ms to s)
- Environment variable merging (sandbox + per-command)
- Retry-on-dead-sandbox pattern matching E2B implementation
- Volume configuration at creation time (Daytona native volumes)
- Resource allocation (cpu/memory/disk/gpu)
- Snapshot and ephemeral sandbox support
- 59 unit tests (mocked SDK) + integration test suite
- Shared conformance tests via @internal/workspace-test-utils
- CI workflows updated for unit and cloud testing

Closes #13111

--- a/.github/workflows/secrets.test-workspaces.yml
+++ b/.github/workflows/secrets.test-workspaces.yml
@@ -83,7 +83,7 @@ jobs:
         uses: ./.github/actions/setup-pnpm-node
 
       - name: Build packages
-        run: pnpm turbo build --filter "@mastra/e2b"
+        run: pnpm turbo build --filter "@mastra/e2b" --filter "@mastra/daytona"
 
       - name: Run E2B cloud integration tests
         run: pnpm test:cloud
@@ -98,6 +98,13 @@ jobs:
           S3_REGION: ${{ secrets.S3_REGION }}
           GCS_SERVICE_ACCOUNT_KEY: ${{ secrets.GCS_SERVICE_ACCOUNT_KEY }}
           TEST_GCS_BUCKET: ${{ secrets.TEST_GCS_BUCKET }}
+
+      - name: Run Daytona cloud integration tests
+        run: pnpm test:cloud
+        working-directory: workspaces/daytona
+        env:
+          NODE_OPTIONS: '--max_old_space_size=4096'
+          DAYTONA_API_KEY: ${{ secrets.DAYTONA_API_KEY }}
 
   test-success:
     needs: [check-changes, test-cloud]
