--- a/packages/_changeset-cli/package.json
+++ b/packages/_changeset-cli/package.json
@@ -15,28 +15,20 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@changesets/assemble-release-plan": "^6.0.9",
-    "@changesets/config": "^3.1.2",
     "@changesets/git": "^3.0.4",
-    "@changesets/read": "^0.6.6",
-    "@changesets/types": "^6.1.0",
     "@changesets/write": "^0.4.0",
     "@clack/prompts": "^1.0.1",
     "@inquirer/editor": "^4.2.23",
     "@manypkg/get-packages": "^3.1.0",
-    "@manypkg/tools": "^2.1.0",
     "@octokit/rest": "^22.0.1",
     "citty": "^0.1.6",
     "dotenv": "^17.2.3",
-    "execa": "^9.6.1",
     "mri": "^1.2.0",
-    "picocolors": "^1.1.1",
-    "semver": "^7.7.2"
+    "picocolors": "^1.1.1"
   },
   "devDependencies": {
     "@internal/lint": "workspace:*",
     "@types/node": "22.19.7",
-    "@types/semver": "^7.7.1",
     "@vitest/coverage-v8": "catalog:",
     "@vitest/ui": "catalog:",
     "eslint": "^9.37.0",
