--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
   - deployers/*
   - stores/*
   - voice/*
+  - examples/voice/aws-nova-sonic-test
   - workflows/*
   - workspaces/*
   - server-adapters/*
