fix(changeset): un-ignore mastracode package for publishing
Co-Authored-By: Mastra Code <noreply@mastra.ai>

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -16,6 +16,7 @@
     "@internal/*",
     "!mastra",
     "!create-mastra",
+    "!mastracode",
     "!@mastra/*",
     "!@internal/playground"
   ]
