--- a/voice/aws-nova-sonic/package.json
+++ b/voice/aws-nova-sonic/package.json
@@ -54,7 +54,7 @@
   },
   "peerDependencies": {
     "@mastra/core": ">=1.0.0-0 <2.0.0-0",
-    "zod": "^3.25.0 || ^4.0.0"
+    "zod": "^3.25.0"
   },
   "homepage": "https://mastra.ai",
   "repository": {
