--- a/mastracode/tsconfig.build.json
+++ b/mastracode/tsconfig.build.json
@@ -2,7 +2,9 @@
   "extends": ["./tsconfig.json", "../tsconfig.build.json"],
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "isolatedDeclarations": true,
+    "noCheck": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "**/__tests__/**/*"]
