--- a/packages/playground-ui/package.json
+++ b/packages/playground-ui/package.json
@@ -78,6 +78,7 @@
     "@codemirror/autocomplete": "^6.20.0",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/merge": "^6.10.2",
     "@codemirror/lang-markdown": "^6.5.0",
     "@codemirror/language-data": "^6.5.2",
     "@codemirror/state": "^6.5.4",
