--- a/templates/template-chat-with-pdf/package.json
+++ b/templates/template-chat-with-pdf/package.json
@@ -19,20 +19,20 @@
   },
   "dependencies": {
     "@libsql/client": "^0.17.0",
-    "@mastra/core": "^1.4.0",
-    "@mastra/evals": "^1.1.1",
-    "@mastra/libsql": "^1.4.0",
-    "@mastra/loggers": "^1.0.1",
-    "@mastra/memory": "^1.3.0",
-    "@mastra/observability": "^1.2.0",
-    "@mastra/rag": "^2.1.0",
+    "@mastra/core": "latest",
+    "@mastra/evals": "latest",
+    "@mastra/libsql": "latest",
+    "@mastra/loggers": "latest",
+    "@mastra/memory": "latest",
+    "@mastra/observability": "latest",
+    "@mastra/rag": "latest",
     "pdf-parse": "^2.4.5",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^25.2.3",
     "@types/pdf-parse": "^1.1.5",
-    "mastra": "^1.3.1",
+    "mastra": "latest",
     "typescript": "^5.9.3"
   }
 }
