--- a/templates/template-chat-with-pdf/package.json
+++ b/templates/template-chat-with-pdf/package.json
@@ -4,14 +4,13 @@
   "description": "An AI-powered PDF assistant that lets you chat with any PDF document. Index PDFs from URLs, ask questions about content, and generate quizzes from the material.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "mastra dev",
     "build": "mastra build",
     "start": "mastra start"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "packageManager": "pnpm@10.29.3",
   "type": "module",
   "engines": {
