--- a/e2e-tests/workspace-tools/verdaccio.yaml
+++ b/e2e-tests/workspace-tools/verdaccio.yaml
@@ -7,12 +7,14 @@ uplinks:
     url: https://registry.npmjs.org/
 
 packages:
+  # Block npm fallback for @mastra/* packages - they MUST be published locally
   '@mastra/*':
     access: $all
     publish: $all
     unpublish: $all
-    proxy: npmjs
+    # No proxy - will 404 if not published locally
 
+  # All other packages can fall back to npm
   '**':
     access: $all
     publish: $all
