vale & remark-lint init

--- a/docs/package.json
+++ b/docs/package.json
@@ -15,7 +15,12 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "validate:frontmatter": "tsx scripts/validate-frontmatter.ts",
-    "format": "prettier --experimental-cli --write ."
+    "format": "prettier --experimental-cli --write .",
+    "vale": "./node_modules/@vvago/vale/bin/vale",
+    "vale:sync": "./node_modules/@vvago/vale/bin/vale sync",
+    "lint:vale": "./node_modules/@vvago/vale/bin/vale src/content/en/docs src/content/en/guides src/content/en/reference",
+    "lint:remark": "remark src/content",
+    "lint:prose": "npm-run-all --parallel lint:vale lint:remark"
   },
   "dependencies": {
     "@copilotkit/react-ui": "1.8.10",
@@ -70,8 +75,22 @@
     "@types/hast": "^3.0.4",
     "@types/mdast": "^4.0.4",
     "@types/node": "22.19.7",
+    "@vvago/vale": "^3.12.0",
     "baseline-browser-mapping": "^2.9.18",
     "postcss": "^8.5.6",
+    "remark-cli": "^12.0.1",
+    "remark-frontmatter": "^5.0.0",
+    "remark-lint": "^10.0.1",
+    "remark-lint-heading-increment": "^4.0.1",
+    "remark-lint-list-item-indent": "^4.0.1",
+    "remark-lint-no-duplicate-headings": "^4.0.1",
+    "remark-lint-no-emphasis-as-heading": "^4.0.1",
+    "remark-lint-no-heading-punctuation": "^4.0.1",
+    "remark-lint-ordered-list-marker-value": "^4.0.1",
+    "remark-lint-unordered-list-marker-style": "^4.0.1",
+    "remark-mdx": "^3.1.1",
+    "remark-preset-lint-consistent": "^6.0.1",
+    "remark-preset-lint-recommended": "^7.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
