--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -29,5 +29,8 @@ catalog:
   typescript: ^5.9.3
   zod: ^4.3.6
 
+onlyBuiltDependencies:
+  - "@vvago/vale"
+
 patchedDependencies:
   "@changesets/get-dependents-graph": patches/@changesets__get-dependents-graph.patch
