--- a/docs/.prettierignore
+++ b/docs/.prettierignore
@@ -1,6 +1,6 @@
+.turbo/**
 .docusaurus/**
 build/**
 node_modules/**
 static/**
-# Temporary until Prettier supports MDX properly
-**/*.mdx
+styles/**
