--- a/docs/package.json
+++ b/docs/package.json
@@ -58,11 +58,9 @@
     "react-hotkeys-hook": "^5.2.1",
     "rehype-parse": "^9.0.1",
     "rehype-remark": "^10.0.1",
-    "remark-gfm": "^4.0.1",
     "remark-stringify": "^11.0.0",
     "tinyglobby": "^0.2.15",
     "unified": "^11.0.5",
-    "unist-util-visit": "^5.1.0",
     "use-stick-to-bottom": "^1.1.1",
     "valibot": "^1.2.0"
   },
@@ -78,8 +76,10 @@
     "@vvago/vale": "^3.12.0",
     "baseline-browser-mapping": "^2.9.18",
     "postcss": "^8.5.6",
+    "remark": "^15.0.1",
     "remark-cli": "^12.0.1",
     "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-lint": "^10.0.1",
     "remark-lint-heading-increment": "^4.0.1",
     "remark-lint-no-duplicate-headings": "^4.0.1",
@@ -94,7 +94,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "unist-util-visit": "^5.1.0"
   },
   "browserslist": {
     "production": [
